chore: 🤖 merge with last commit

--- a/lib/core/l10n/intl_en.arb
+++ b/lib/core/l10n/intl_en.arb
@@ -78,6 +78,9 @@
   "enterYourUsername": "Enter your username",
   "error": "Error",
   "errorCreateExercise": "Failed to create exercise",
+  "errorCreateQuestion": "Failed to create question",
+  "errorUpdateExercise": "Failed to update exercise",
+  "errorUpdateQuestion": "Failed to update question",
   "establishedAt": "Established at :",
   "exam": "Exam",
   "examDescription": "Exam Description",
@@ -166,12 +169,14 @@
   "successCreateExercise": "Successfully to create exercise",
   "successCreateExercises": "Successfully create exercises",
   "successCreateProgram": "Successfully create program",
+  "successCreateQuestion": "Successfully create question",
   "successLogout": "Successfully logged out",
   "successSignIn": "Successfully signed in ",
   "successSignUp": "Successfully signed up ",
   "successUpdateClub": "Successfully update club",
   "successUpdateExercises": "Successfully update exercises",
   "successUpdateProfile": "Successfully update profile",
+  "successUpdateQuestions": "Successfully update questions",
   "system": "System",
   "tactical": "Tactical",
   "theme": "Theme",
