--- a/lib/core/l10n/intl_es.arb
+++ b/lib/core/l10n/intl_es.arb
@@ -2,90 +2,93 @@
   "@@locale": "es",
   "about": "Acerca de",
   "activeSession": "Activo",
-  "add": "Añadir",
-  "addMember": "Añadir miembro",
+  "add": "Agregar",
+  "addMember": "Agregar Miembro",
   "address": "Dirección",
-  "addressRequired": "La dirección es obligatoria",
+  "addressRequired": "La dirección es requerida",
   "alert": "Alerta",
   "alreadyHaveAnAccount": "¿Ya tienes una cuenta?",
   "assets": "Activos",
   "athlete": "Atleta",
   "athletes": "Atletas",
-  "back": "Atrás",
+  "back": "Volver",
   "basketBall": "Baloncesto",
   "bornDate": "Fecha de Nacimiento",
-  "bornDateRequired": "La fecha de nacimiento es obligatoria",
+  "bornDateRequired": "La fecha de nacimiento es requerida",
   "bornPlace": "Lugar de Nacimiento",
-  "bornPlaceRequired": "El lugar de nacimiento es obligatorio",
+  "bornPlaceRequired": "El lugar de nacimiento es requerido",
   "calendar": "Calendario",
   "cancel": "Cancelar",
   "club": "Club",
-  "clubDashboard": "Panel del club",
-  "clubDescription": "Descripción del club",
-  "clubDescriptionRequired": "Se requiere la descripción del club",
-  "clubImageRequired": "Se requiere la imagen del club",
-  "clubManagement": "Gestión del club",
-  "clubName": "Nombre del club",
-  "clubNameRequired": "Se requiere el nombre del club",
+  "clubDashboard": "Panel del Club",
+  "clubDescription": "Descripción del Club",
+  "clubDescriptionRequired": "La descripción del club es requerida",
+  "clubImageRequired": "La imagen del club es requerida",
+  "clubManagement": "Gestión del Club",
+  "clubName": "Nombre del Club",
+  "clubNameRequired": "El nombre del club es requerido",
   "clubs": "Clubes",
   "coach": "Entrenador",
   "coaches": "Entrenadores",
   "create": "Crear",
-  "createClub": "Crear club",
-  "createExam": "Crear examen",
-  "createProgram": "Crear programa",
-  "dark": "Modo oscuro",
+  "createClub": "Crear Club",
+  "createExam": "Crear Examen",
+  "createProgram": "Crear Programa",
+  "dark": "Modo Oscuro",
   "delete": "Eliminar",
   "description": "Descripción",
   "detail": "Detalle",
   "dontHaveAnAccount": "¿No tienes una cuenta?",
   "download": "Descargar",
-  "dueAt": "Vencimiento en",
-  "dueAtRequired": "La fecha límite es obligatoria",
+  "dueAt": "Vence el",
+  "dueAtRequired": "La fecha de vencimiento es requerida",
   "edit": "Editar",
   "editClub": "Editar Club",
-  "editExam": "Editar examen",
-  "editProfile": "Editar perfil",
-  "editProgram": "Editar programa",
+  "editExam": "Editar Examen",
+  "editProfile": "Editar Perfil",
+  "editProgram": "Editar Programa",
   "email": "Correo Electrónico",
-  "emailOrUsernameOrPhone": "Correo electrónico / Nombre de usuario / Teléfono",
-  "emailRequired": "Se requiere correo electrónico",
-  "emailUsernamePhoneAlreadyRegistered": "Correo electrónico / Nombre de usuario / Teléfono ya registrado",
+  "emailOrUsernameOrPhone": "Correo Electrónico / Nombre de Usuario / Teléfono",
+  "emailRequired": "El correo electrónico es requerido",
+  "emailUsernamePhoneAlreadyRegistered": "Correo Electrónico / Nombre de Usuario / Teléfono ya registrado",
   "emptyExam": "El examen está vacío",
-  "endDate": "Fecha de finalización",
-  "endDateRequired": "Se requiere la fecha de finalización",
+  "endDate": "Fecha de Fin",
+  "endDateRequired": "La fecha de fin es requerida",
   "english": "Inglés",
-  "enterClubDescription": "Introduce la descripción del club",
-  "enterClubName": "Introduce el nombre del club",
+  "enterClubDescription": "Ingrese la descripción del club",
+  "enterClubName": "Ingrese el nombre del club",
   "enterDescription": "Ingrese la descripción",
-  "enterDueAt": "Ingrese la fecha límite",
-  "enterEmailOrUsernameOrPhone": "Introduce correo electrónico / nombre de usuario / teléfono",
-  "enterEndDate": "Introduce la fecha de finalización",
+  "enterDueAt": "Ingrese la fecha de vencimiento",
+  "enterEmailOrUsernameOrPhone": "Ingrese correo electrónico / nombre de usuario / teléfono",
+  "enterEndDate": "Ingrese la fecha de fin",
   "enterExamDescription": "Ingrese la descripción del examen",
   "enterExamTitle": "Ingrese el título del examen",
-  "enterProgramName": "Introduce el nombre del programa",
-  "enterStartDate": "Introduce la fecha de inicio",
+  "enterProgramName": "Ingrese el nombre del programa",
+  "enterStartDate": "Ingrese la fecha de inicio",
   "enterYourAddress": "Ingrese su dirección",
   "enterYourBornDate": "Ingrese su fecha de nacimiento",
   "enterYourBornPlace": "Ingrese su lugar de nacimiento",
-  "enterYourEmail": "Introduce tu correo electrónico",
-  "enterYourExpertise": "Ingrese su experiencia",
-  "enterYourGender": "Introduce tu género",
-  "enterYourName": "Introduce tu nombre",
-  "enterYourPass": "Introduce tu contraseña",
-  "enterYourPhoneNumber": "Introduce tu número de teléfono",
+  "enterYourEmail": "Ingrese su correo electrónico",
+  "enterYourExpertise": "Ingrese su especialidad",
+  "enterYourGender": "Ingrese su género",
+  "enterYourName": "Ingrese su nombre",
+  "enterYourPass": "Ingrese su contraseña",
+  "enterYourPhoneNumber": "Ingrese su número de teléfono",
   "enterYourReligion": "Ingrese su religión",
-  "enterYourUsername": "Introduce tu nombre de usuario",
+  "enterYourUsername": "Ingrese su nombre de usuario",
   "error": "Error",
   "errorCreateExercise": "Error al crear el ejercicio",
+  "errorCreateQuestion": "Error al crear la pregunta",
+  "errorUpdateExercise": "Error al actualizar el ejercicio",
+  "errorUpdateQuestion": "Error al actualizar la pregunta",
   "establishedAt": "Establecido en:",
   "exam": "Examen",
-  "examDescription": "Descripción del examen",
+  "examDescription": "Descripción del Examen",
   "exams": "Exámenes",
-  "examTitleRequired": "El título del examen es obligatorio",
+  "examTitleRequired": "El título del examen es requerido",
   "exercise": "Ejercicio",
-  "expertise": "Experiencia",
-  "expertiseRequired": "La experiencia es obligatoria",
+  "expertise": "Especialidad",
+  "expertiseRequired": "La especialidad es requerida",
   "expiredSession": "Expirado",
   "failedCreateClub": "Error al crear el club",
   "failedCreateExam": "Error al crear el examen",
@@ -100,90 +103,92 @@
   "failedUpdateClub": "Error al actualizar el club",
   "failedUpdateExercises": "Error al actualizar los ejercicios",
   "failedUpdateProfile": "Error al actualizar el perfil",
-  "futsal": "Fútbol sala",
+  "futsal": "Fútbol Sala",
   "gender": "Género",
-  "genderRequired": "Se requiere el género",
+  "genderRequired": "El género es requerido",
   "general": "General",
   "handBall": "Balonmano",
-  "hello": "Hola",
+  "hello": "Hola,",
   "history": "Historia",
-  "identifierRequired": "Se requiere identificador",
+  "identifierRequired": "El identificador es requerido",
   "indonesian": "Indonesio",
   "info": "Información",
-  "invalidEmail": "Correo electrónico inválido",
-  "invalidPhoneNumber": "Número de teléfono inválido",
+  "invalidEmail": "Correo electrónico no válido",
+  "invalidPhoneNumber": "Número de teléfono no válido",
   "invite": "Invitar",
   "join": "Unirse",
   "kick": "Expulsar",
   "language": "Idioma",
-  "leave": "Dejar",
-  "leaveClub": "Dejar club",
+  "leave": "Salir",
+  "leaveClub": "Dejar el Club",
   "leaveClubConfirmation": "¿Estás seguro de que quieres dejar este club?",
   "leaveClubSuccess": "Club dejado con éxito",
-  "light": "Modo claro",
-  "logout": "Cerrar sesión",
+  "light": "Modo Claro",
+  "logout": "Cerrar Sesión",
   "management": "Gestión",
   "members": "Miembros",
   "myClub": "Mi Club",
-  "myClubTraining": "Entrenamiento de mi club",
+  "myClubTraining": "Mi Club",
   "name": "Nombre",
-  "nameRequired": "Se requiere el nombre",
-  "newExam": "Nuevo examen",
-  "newProgram": "Nuevo programa",
+  "nameRequired": "El nombre es requerido",
+  "newExam": "Nuevo Examen",
+  "newProgram": "Nuevo Programa",
   "noClubsFound": "No se encontraron clubes",
   "noEvents": "No hay eventos",
-  "noExpertise": "Sin experiencia",
+  "noExpertise": "Sin especialidad",
   "noMembersFound": "No se encontraron miembros",
-  "noSpaceAllowed": "No se permite espacio",
+  "noSpaceAllowed": "No se permiten espacios",
   "noUsersFound": "No se encontraron usuarios",
   "or": "o",
-  "overview": "Visión general",
+  "overview": "Visión General",
   "pageNotFound": "Página no encontrada",
-  "passRequired": "Se requiere contraseña",
+  "passRequired": "La contraseña es requerida",
   "password": "Contraseña",
-  "phoneNumber": "Número de teléfono",
-  "phoneNumberRequired": "Se requiere número de teléfono",
+  "phoneNumber": "Número de Teléfono",
+  "phoneNumberRequired": "El número de teléfono es requerido",
   "program": "Programa",
-  "programDetail": "Detalle del programa",
-  "programNameRequired": "Se requiere el nombre del programa",
+  "programDetail": "Detalle del Programa",
+  "programNameRequired": "El nombre del programa es requerido",
   "programs": "Programas",
   "question": "Pregunta",
   "religion": "Religión",
-  "religionRequired": "La religión es obligatoria",
+  "religionRequired": "La religión es requerida",
   "search": "Buscar",
   "session": "Sesión",
-  "settings": "Configuraciones",
-  "signIn": "Iniciar sesión",
+  "settings": "Configuración",
+  "signIn": "Iniciar Sesión",
   "signUp": "Registrarse",
   "soccer": "Fútbol",
-  "sport": "Deporte",
-  "sportType": "Tipo de deporte",
-  "startDate": "Fecha de inicio",
-  "startDateRequired": "Se requiere la fecha de inicio",
+  "sport": "Deporte:",
+  "sportType": "Tipo de Deporte",
+  "startDate": "Fecha de Inicio",
+  "startDateRequired": "La fecha de inicio es requerida",
   "succesEditProgram": "Programa editado con éxito",
   "success": "Éxito",
   "successCreateClub": "Club creado con éxito",
   "successCreateExercise": "Ejercicio creado con éxito",
   "successCreateExercises": "Ejercicios creados con éxito",
   "successCreateProgram": "Programa creado con éxito",
+  "successCreateQuestion": "Pregunta creada con éxito",
   "successLogout": "Sesión cerrada con éxito",
   "successSignIn": "Inicio de sesión exitoso",
   "successSignUp": "Registro exitoso",
   "successUpdateClub": "Club actualizado con éxito",
   "successUpdateExercises": "Ejercicios actualizados con éxito",
   "successUpdateProfile": "Perfil actualizado con éxito",
+  "successUpdateQuestions": "Preguntas actualizadas con éxito",
   "system": "Sistema",
   "tactical": "Táctico",
   "theme": "Tema",
   "title": "Título",
-  "updateClub": "Actualizar club",
+  "updateClub": "Actualizar Club",
   "updateProfile": "Actualizar Perfil",
   "upload": "Subir",
   "user": "Usuario",
-  "username": "Nombre de usuario",
+  "username": "Nombre de Usuario",
   "usernameCantContainUppercase": "El nombre de usuario no puede contener letras mayúsculas",
   "usernameNotAvailable": "Nombre de usuario no disponible",
-  "usernameRequired": "Se requiere nombre de usuario",
+  "usernameRequired": "El nombre de usuario es requerido",
   "volleyBall": "Voleibol",
   "warning": "Advertencia"
 }
