--- a/lib/core/l10n/intl_hi.arb
+++ b/lib/core/l10n/intl_hi.arb
@@ -7,10 +7,10 @@
   "address": "पता",
   "addressRequired": "पता आवश्यक है",
   "alert": "चेतावनी",
-  "alreadyHaveAnAccount": "पहले से एक खाता है?",
+  "alreadyHaveAnAccount": "पहले से ही खाता है?",
   "assets": "संपत्तियाँ",
-  "athlete": "खिलाड़ी",
-  "athletes": "खिलाड़ी",
+  "athlete": "एथलीट",
+  "athletes": "एथलीट",
   "back": "वापस",
   "basketBall": "बास्केटबॉल",
   "bornDate": "जन्म तिथि",
@@ -30,17 +30,17 @@
   "clubs": "क्लब",
   "coach": "कोच",
   "coaches": "कोच",
-  "create": "बनाएं",
+  "create": "बनाएँ",
   "createClub": "क्लब बनाएं",
-  "createExam": "परीक्षा बनाएँ",
+  "createExam": "परीक्षा बनाएं",
   "createProgram": "कार्यक्रम बनाएं",
   "dark": "डार्क मोड",
   "delete": "हटाएं",
   "description": "विवरण",
   "detail": "विवरण",
   "dontHaveAnAccount": "खाता नहीं है?",
-  "download": "डाउनलोड करें",
-  "dueAt": "में निर्धारित",
+  "download": "डाउनलोड",
+  "dueAt": "समाप्ति तिथि",
   "dueAtRequired": "समाप्ति तिथि आवश्यक है",
   "edit": "संपादित करें",
   "editClub": "क्लब संपादित करें",
@@ -48,18 +48,18 @@
   "editProfile": "प्रोफ़ाइल संपादित करें",
   "editProgram": "कार्यक्रम संपादित करें",
   "email": "ईमेल",
-  "emailOrUsernameOrPhone": "ईमेल / उपयोगकर्ता नाम / फोन",
+  "emailOrUsernameOrPhone": "ईमेल / उपयोगकर्ता नाम / फ़ोन",
   "emailRequired": "ईमेल आवश्यक है",
-  "emailUsernamePhoneAlreadyRegistered": "ईमेल / उपयोगकर्ता नाम / फोन पहले से पंजीकृत है",
+  "emailUsernamePhoneAlreadyRegistered": "ईमेल / उपयोगकर्ता नाम / फ़ोन पहले से पंजीकृत है",
   "emptyExam": "परीक्षा खाली है",
   "endDate": "समाप्ति तिथि",
   "endDateRequired": "समाप्ति तिथि आवश्यक है",
-  "english": "अंग्रेजी",
+  "english": "अंग्रेज़ी",
   "enterClubDescription": "क्लब विवरण दर्ज करें",
   "enterClubName": "क्लब का नाम दर्ज करें",
   "enterDescription": "विवरण दर्ज करें",
   "enterDueAt": "समाप्ति तिथि दर्ज करें",
-  "enterEmailOrUsernameOrPhone": "ईमेल / उपयोगकर्ता नाम / फोन दर्ज करें",
+  "enterEmailOrUsernameOrPhone": "ईमेल / उपयोगकर्ता नाम / फ़ोन दर्ज करें",
   "enterEndDate": "समाप्ति तिथि दर्ज करें",
   "enterExamDescription": "परीक्षा का विवरण दर्ज करें",
   "enterExamTitle": "परीक्षा का शीर्षक दर्ज करें",
@@ -78,18 +78,21 @@
   "enterYourUsername": "अपना उपयोगकर्ता नाम दर्ज करें",
   "error": "त्रुटि",
   "errorCreateExercise": "व्यायाम बनाने में विफल",
-  "establishedAt": "स्थापित: ",
+  "errorCreateQuestion": "प्रश्न बनाने में विफल",
+  "errorUpdateExercise": "व्यायाम अपडेट करने में त्रुटि",
+  "errorUpdateQuestion": "प्रश्न अपडेट करने में विफल",
+  "establishedAt": "स्थापित :",
   "exam": "परीक्षा",
-  "examDescription": "परीक्षा का विवरण",
+  "examDescription": "परीक्षा विवरण",
   "exams": "परीक्षाएँ",
-  "examTitleRequired": "परीक्षा का शीर्षक आवश्यक है",
+  "examTitleRequired": "परीक्षा शीर्षक आवश्यक है",
   "exercise": "व्यायाम",
   "expertise": "विशेषज्ञता",
   "expertiseRequired": "विशेषज्ञता आवश्यक है",
-  "expiredSession": "समाप्त",
+  "expiredSession": "समय सीमा समाप्त",
   "failedCreateClub": "क्लब बनाने में विफल",
   "failedCreateExam": "परीक्षा बनाने में विफल",
-  "failedCreateExercises": "अभ्यास बनाने में विफल",
+  "failedCreateExercises": "व्यायाम बनाने में विफल",
   "failedCreateProgram": "कार्यक्रम बनाने में विफल",
   "failedEditExam": "परीक्षा संपादित करने में विफल",
   "failedEditProgram": "कार्यक्रम संपादित करने में विफल",
@@ -98,20 +101,20 @@
   "failedSignIn": "साइन इन करने में विफल",
   "failedSignUp": "साइन अप करने में विफल",
   "failedUpdateClub": "क्लब अपडेट करने में विफल",
-  "failedUpdateExercises": "अभ्यास अपडेट करने में विफल",
+  "failedUpdateExercises": "व्यायाम अपडेट करने में विफल",
   "failedUpdateProfile": "प्रोफ़ाइल अपडेट करने में विफल",
   "futsal": "फुटसल",
   "gender": "लिंग",
   "genderRequired": "लिंग आवश्यक है",
   "general": "सामान्य",
   "handBall": "हैंडबॉल",
-  "hello": "नमस्ते",
+  "hello": "नमस्ते,",
   "history": "इतिहास",
   "identifierRequired": "पहचानकर्ता आवश्यक है",
   "indonesian": "इंडोनेशियाई",
   "info": "जानकारी",
-  "invalidEmail": "अवैध ईमेल",
-  "invalidPhoneNumber": "अवैध फोन नंबर",
+  "invalidEmail": "अमान्य ईमेल",
+  "invalidPhoneNumber": "अमान्य फोन नंबर",
   "invite": "आमंत्रित करें",
   "join": "शामिल हों",
   "kick": "निकालें",
@@ -119,59 +122,61 @@
   "leave": "छोड़ें",
   "leaveClub": "क्लब छोड़ें",
   "leaveClubConfirmation": "क्या आप वाकई इस क्लब को छोड़ना चाहते हैं?",
-  "leaveClubSuccess": "क्लब सफलतापूर्वक छोड़ दिया",
+  "leaveClubSuccess": "क्लब छोड़ने में सफल",
   "light": "लाइट मोड",
   "logout": "लॉगआउट",
   "management": "प्रबंधन",
   "members": "सदस्य",
   "myClub": "मेरा क्लब",
-  "myClubTraining": "मेरे क्लब का प्रशिक्षण",
+  "myClubTraining": "मेरा क्लब",
   "name": "नाम",
   "nameRequired": "नाम आवश्यक है",
-  "mewExam": "नई परीक्षा",
+  "newExam": "नई परीक्षा",
   "newProgram": "नया कार्यक्रम",
   "noClubsFound": "कोई क्लब नहीं मिला",
   "noEvents": "कोई घटनाएँ नहीं",
   "noExpertise": "कोई विशेषज्ञता नहीं",
   "noMembersFound": "कोई सदस्य नहीं मिला",
-  "noSpaceAllowed": "कोई स्थान अनुमति नहीं है",
+  "noSpaceAllowed": "स्थान की अनुमति नहीं",
   "noUsersFound": "कोई उपयोगकर्ता नहीं मिला",
   "or": "या",
   "overview": "अवलोकन",
   "pageNotFound": "पृष्ठ नहीं मिला",
   "passRequired": "पासवर्ड आवश्यक है",
   "password": "पासवर्ड",
-  "phoneNumber": "फोन नंबर",
-  "phoneNumberRequired": "फोन नंबर आवश्यक है",
+  "phoneNumber": "फ़ोन नंबर",
+  "phoneNumberRequired": "फ़ोन नंबर आवश्यक है",
   "program": "कार्यक्रम",
-  "programDetail": "कार्यक्रम का विवरण",
+  "programDetail": "कार्यक्रम विवरण",
   "programNameRequired": "कार्यक्रम का नाम आवश्यक है",
   "programs": "कार्यक्रम",
   "question": "प्रश्न",
   "religion": "धर्म",
   "religionRequired": "धर्म आवश्यक है",
-  "search": "खोजें",
+  "search": "खोज",
   "session": "सत्र",
-  "settings": "सेटिंग्स",
-  "signIn": "साइन इन करें",
-  "signUp": "साइन अप करें",
+  "settings": "समायोजन",
+  "signIn": "साइन इन",
+  "signUp": "साइन अप",
   "soccer": "फुटबॉल",
-  "sport": "खेल",
+  "sport": "खेल:",
   "sportType": "खेल प्रकार",
   "startDate": "प्रारंभ तिथि",
   "startDateRequired": "प्रारंभ तिथि आवश्यक है",
-  "succesEditProgram": "कार्यक्रम सफलतापूर्वक संपादित किया गया",
+  "succesEditProgram": "कार्यक्रम सफलतापूर्वक संपादित",
   "success": "सफलता",
   "successCreateClub": "क्लब सफलतापूर्वक बनाया गया",
   "successCreateExercise": "व्यायाम सफलतापूर्वक बनाया गया",
-  "successCreateExercises": "अभ्यास सफलतापूर्वक बनाए गए",
+  "successCreateExercises": "व्यायाम सफलतापूर्वक बनाए गए",
   "successCreateProgram": "कार्यक्रम सफलतापूर्वक बनाया गया",
+  "successCreateQuestion": "प्रश्न सफलतापूर्वक बनाया गया",
   "successLogout": "सफलतापूर्वक लॉगआउट",
-  "successSignIn": "सफलतापूर्वक साइन इन किया गया",
-  "successSignUp": "सफलतापूर्वक साइन अप किया गया",
+  "successSignIn": "सफलतापूर्वक साइन इन",
+  "successSignUp": "सफलतापूर्वक साइन अप",
   "successUpdateClub": "क्लब सफलतापूर्वक अपडेट किया गया",
-  "successUpdateExercises": "व्यायाम सफलतापूर्वक अपडेट किया गया",
+  "successUpdateExercises": "व्यायाम सफलतापूर्वक अपडेट किए गए",
   "successUpdateProfile": "प्रोफ़ाइल सफलतापूर्वक अपडेट की गई",
+  "successUpdateQuestions": "प्रश्न सफलतापूर्वक अपडेट किए गए",
   "system": "सिस्टम",
   "tactical": "रणनीतिक",
   "theme": "थीम",
