--- a/lib/core/l10n/intl_id.arb
+++ b/lib/core/l10n/intl_id.arb
@@ -3,16 +3,16 @@
   "about": "Tentang",
   "activeSession": "Aktif",
   "add": "Tambah",
-  "addMember": "Tambahkan Anggota",
+  "addMember": "Tambah Anggota",
   "address": "Alamat",
   "addressRequired": "Alamat diperlukan",
   "alert": "Peringatan",
   "alreadyHaveAnAccount": "Sudah punya akun?",
-  "assets": "Asset",
+  "assets": "Aset",
   "athlete": "Atlet",
   "athletes": "Atlet",
   "back": "Kembali",
-  "basketBall": "Basket",
+  "basketBall": "Bola Basket",
   "bornDate": "Tanggal Lahir",
   "bornDateRequired": "Tanggal lahir diperlukan",
   "bornPlace": "Tempat Lahir",
@@ -22,11 +22,11 @@
   "club": "Klub",
   "clubDashboard": "Dasbor Klub",
   "clubDescription": "Deskripsi Klub",
-  "clubDescriptionRequired": "Deskripsi klub wajib diisi",
-  "clubImageRequired": "Gambar klub wajib diisi",
+  "clubDescriptionRequired": "Deskripsi klub diperlukan",
+  "clubImageRequired": "Gambar klub diperlukan",
   "clubManagement": "Manajemen Klub",
   "clubName": "Nama Klub",
-  "clubNameRequired": "Nama klub wajib diisi",
+  "clubNameRequired": "Nama klub diperlukan",
   "clubs": "Klub",
   "coach": "Pelatih",
   "coaches": "Pelatih",
@@ -37,87 +37,90 @@
   "dark": "Mode Gelap",
   "delete": "Hapus",
   "description": "Deskripsi",
-  "detail": "Rincian",
-  "dontHaveAnAccount": "Belum punya akun?",
+  "detail": "Detail",
+  "dontHaveAnAccount": "Tidak punya akun?",
   "download": "Unduh",
-  "dueAt": "Tenggat",
-  "dueAtRequired": "Tanggal jatuh tempo diperlukan",
-  "edit": "Ubah",
-  "editClub": "Ubah Klub",
+  "dueAt": "Jatuh Tempo",
+  "dueAtRequired": "Jatuh tempo diperlukan",
+  "edit": "Edit",
+  "editClub": "Edit Klub",
   "editExam": "Edit Ujian",
-  "editProfile": "Ubah Profil",
-  "editProgram": "Ubah Program",
+  "editProfile": "Edit Profil",
+  "editProgram": "Edit Program",
   "email": "Email",
-  "emailOrUsernameOrPhone": "Email / Nama pengguna / Telepon",
-  "emailRequired": "Email wajib diisi",
-  "emailUsernamePhoneAlreadyRegistered": "Email / Nama pengguna / Telepon sudah terdaftar",
+  "emailOrUsernameOrPhone": "Email / Nama Pengguna / Telepon",
+  "emailRequired": "Email diperlukan",
+  "emailUsernamePhoneAlreadyRegistered": "Email / Nama Pengguna / Telepon sudah terdaftar",
   "emptyExam": "Ujian kosong",
-  "endDate": "Tanggal Berakhir",
-  "endDateRequired": "Tanggal berakhir wajib diisi",
-  "english": "Bahasa Inggris",
+  "endDate": "Tanggal Selesai",
+  "endDateRequired": "Tanggal selesai diperlukan",
+  "english": "Inggris",
   "enterClubDescription": "Masukkan deskripsi klub",
   "enterClubName": "Masukkan nama klub",
   "enterDescription": "Masukkan deskripsi",
-  "enterDueAt": "Masukkan tanggal jatuh tempo",
-  "enterEmailOrUsernameOrPhone": "Masukan email / nama pengguna / telepon",
-  "enterEndDate": "Masukkan tanggal berakhir",
+  "enterDueAt": "Masukkan jatuh tempo",
+  "enterEmailOrUsernameOrPhone": "Masukkan email / nama pengguna / telepon",
+  "enterEndDate": "Masukkan tanggal selesai",
   "enterExamDescription": "Masukkan deskripsi ujian",
   "enterExamTitle": "Masukkan judul ujian",
   "enterProgramName": "Masukkan nama program",
-  "enterStartDate": "Masukkan tanggal dimulai",
+  "enterStartDate": "Masukkan tanggal mulai",
   "enterYourAddress": "Masukkan alamat Anda",
   "enterYourBornDate": "Masukkan tanggal lahir Anda",
   "enterYourBornPlace": "Masukkan tempat lahir Anda",
-  "enterYourEmail": "Masukkan email anda",
+  "enterYourEmail": "Masukkan email Anda",
   "enterYourExpertise": "Masukkan keahlian Anda",
-  "enterYourGender": "Pilih jenis kelamin anda",
-  "enterYourName": "Masukkan nama anda",
-  "enterYourPass": "Masukkan kata sandi anda",
-  "enterYourPhoneNumber": "Masukkan nomor telepon anda",
+  "enterYourGender": "Masukkan jenis kelamin Anda",
+  "enterYourName": "Masukkan nama Anda",
+  "enterYourPass": "Masukkan kata sandi Anda",
+  "enterYourPhoneNumber": "Masukkan nomor telepon Anda",
   "enterYourReligion": "Masukkan agama Anda",
-  "enterYourUsername": "Masukkan nama pengguna anda",
-  "error": "Gagal",
+  "enterYourUsername": "Masukkan nama pengguna Anda",
+  "error": "Kesalahan",
   "errorCreateExercise": "Gagal membuat latihan",
-  "establishedAt": "Didirikan pada :",
-  "exam": "Tes",
+  "errorCreateQuestion": "Gagal membuat pertanyaan",
+  "errorUpdateExercise": "Gagal memperbarui latihan",
+  "errorUpdateQuestion": "Gagal memperbarui pertanyaan",
+  "establishedAt": "Ditetapkan pada :",
+  "exam": "Ujian",
   "examDescription": "Deskripsi Ujian",
-  "exams": "Tes",
+  "exams": "Ujian",
   "examTitleRequired": "Judul ujian diperlukan",
   "exercise": "Latihan",
   "expertise": "Keahlian",
   "expertiseRequired": "Keahlian diperlukan",
-  "expiredSession": "Kadaluarsa",
+  "expiredSession": "Kedaluwarsa",
   "failedCreateClub": "Gagal membuat klub",
   "failedCreateExam": "Gagal membuat ujian",
   "failedCreateExercises": "Gagal membuat latihan",
   "failedCreateProgram": "Gagal membuat program",
   "failedEditExam": "Gagal mengedit ujian",
-  "failedEditProgram": "Gagal mengubah program",
+  "failedEditProgram": "Gagal mengedit program",
   "failedLeaveClub": "Gagal meninggalkan klub",
   "failedLogout": "Gagal keluar",
   "failedSignIn": "Gagal masuk",
-  "failedSignUp": "Gagal daftar",
+  "failedSignUp": "Gagal mendaftar",
   "failedUpdateClub": "Gagal memperbarui klub",
   "failedUpdateExercises": "Gagal memperbarui latihan",
   "failedUpdateProfile": "Gagal memperbarui profil",
   "futsal": "Futsal",
   "gender": "Jenis Kelamin",
-  "genderRequired": "Jenis kelamin wajib diisi",
+  "genderRequired": "Jenis kelamin diperlukan",
   "general": "Umum",
   "handBall": "Bola Tangan",
   "hello": "Halo,",
-  "history": "Riwayat",
-  "identifierRequired": "Identitas wajib diisi",
-  "indonesian": "Bahasa Indonesia",
-  "info": "Informasi",
+  "history": "Sejarah",
+  "identifierRequired": "Pengenal diperlukan",
+  "indonesian": "Indonesia",
+  "info": "Info",
   "invalidEmail": "Email tidak valid",
   "invalidPhoneNumber": "Nomor telepon tidak valid",
   "invite": "Undang",
-  "join": "Gabung",
-  "kick": "Hapus",
+  "join": "Bergabung",
+  "kick": "Keluar",
   "language": "Bahasa",
   "leave": "Keluar",
-  "leaveClub": "Keluar dari klub",
+  "leaveClub": "Keluar Klub",
   "leaveClubConfirmation": "Apakah Anda yakin ingin meninggalkan klub ini?",
   "leaveClubSuccess": "Berhasil meninggalkan klub",
   "light": "Mode Terang",
@@ -127,25 +130,25 @@
   "myClub": "Klub Saya",
   "myClubTraining": "Klub Saya",
   "name": "Nama",
-  "nameRequired": "Nama wajib diisi",
-  "newExam": "Tes Baru",
+  "nameRequired": "Nama diperlukan",
+  "newExam": "Ujian Baru",
   "newProgram": "Program Baru",
   "noClubsFound": "Tidak ada klub yang ditemukan",
-  "noEvents": "Tidak ada kegiatan",
-  "noExpertise": "Tidak memiliki keahlian",
-  "noMembersFound": "Anggota tidak ditemukan",
-  "noSpaceAllowed": "Tidak diperbolehkan ada spasi",
-  "noUsersFound": "Pengguna tidak ditemukan",
+  "noEvents": "Tidak ada acara",
+  "noExpertise": "Tidak ada keahlian",
+  "noMembersFound": "Tidak ada anggota yang ditemukan",
+  "noSpaceAllowed": "Tidak ada ruang yang diperbolehkan",
+  "noUsersFound": "Tidak ada pengguna yang ditemukan",
   "or": "atau",
-  "overview": "Ringkasan",
+  "overview": "Ikhtisar",
   "pageNotFound": "Halaman tidak ditemukan",
-  "passRequired": "Kata sandi wajib diisi",
+  "passRequired": "Kata sandi diperlukan",
   "password": "Kata Sandi",
   "phoneNumber": "Nomor Telepon",
-  "phoneNumberRequired": "Nomor telepon wajib diisi",
+  "phoneNumberRequired": "Nomor telepon diperlukan",
   "program": "Program",
-  "programDetail": "Rincian Program",
-  "programNameRequired": "Nama program wajib diisi",
+  "programDetail": "Detail Program",
+  "programNameRequired": "Nama program diperlukan",
   "programs": "Program",
   "question": "Pertanyaan",
   "religion": "Agama",
@@ -159,31 +162,33 @@
   "sport": "Olahraga :",
   "sportType": "Jenis Olahraga",
   "startDate": "Tanggal Mulai",
-  "startDateRequired": "Tanggal mulai wajib diisi",
-  "succesEditProgram": "Berhasil mengubah program",
+  "startDateRequired": "Tanggal mulai diperlukan",
+  "succesEditProgram": "Berhasil mengedit program",
   "success": "Berhasil",
-  "successCreateClub": "Berhasil membuat club",
+  "successCreateClub": "Berhasil membuat klub",
   "successCreateExercise": "Berhasil membuat latihan",
   "successCreateExercises": "Berhasil membuat latihan",
   "successCreateProgram": "Berhasil membuat program",
+  "successCreateQuestion": "Berhasil membuat pertanyaan",
   "successLogout": "Berhasil keluar",
-  "successSignIn": "Berhasil masuk ",
-  "successSignUp": "Berhasil daftar",
+  "successSignIn": "Berhasil masuk",
+  "successSignUp": "Berhasil mendaftar",
   "successUpdateClub": "Berhasil memperbarui klub",
-  "successUpdateExercises": "Berhasil mengubah latihan",
+  "successUpdateExercises": "Berhasil memperbarui latihan",
   "successUpdateProfile": "Berhasil memperbarui profil",
+  "successUpdateQuestions": "Berhasil memperbarui pertanyaan",
   "system": "Sistem",
   "tactical": "Taktis",
   "theme": "Tema",
   "title": "Judul",
-  "updateClub": "Perbarui Club",
+  "updateClub": "Perbarui Klub",
   "updateProfile": "Perbarui Profil",
   "upload": "Unggah",
   "user": "Pengguna",
-  "username": "Nama Penguna",
-  "usernameCantContainUppercase": "Nama pengguna tidak boleh mengandung huruf kapital",
+  "username": "Nama Pengguna",
+  "usernameCantContainUppercase": "Nama pengguna tidak boleh mengandung huruf besar",
   "usernameNotAvailable": "Nama pengguna tidak tersedia",
-  "usernameRequired": "Nama penguna wajib diisi",
-  "volleyBall": "Voli",
+  "usernameRequired": "Nama pengguna diperlukan",
+  "volleyBall": "Bola Voli",
   "warning": "Peringatan"
 }
