--- a/lib/core/l10n/intl_zh.arb
+++ b/lib/core/l10n/intl_zh.arb
@@ -1,26 +1,26 @@
 {
   "@@locale": "zh",
   "about": "关于",
-  "activeSession": "活动中",
+  "activeSession": "活跃",
   "add": "添加",
   "addMember": "添加成员",
   "address": "地址",
-  "addressRequired": "地址是必填项",
+  "addressRequired": "地址是必需的",
   "alert": "警报",
-  "alreadyHaveAnAccount": "已有账号？",
+  "alreadyHaveAnAccount": "已经有账户？",
   "assets": "资产",
   "athlete": "运动员",
   "athletes": "运动员",
   "back": "返回",
   "basketBall": "篮球",
   "bornDate": "出生日期",
-  "bornDateRequired": "出生日期是必填项",
-  "bornPlace": "出生地点",
-  "bornPlaceRequired": "出生地点是必填项",
+  "bornDateRequired": "出生日期是必需的",
+  "bornPlace": "出生地",
+  "bornPlaceRequired": "出生地是必需的",
   "calendar": "日历",
   "cancel": "取消",
   "club": "俱乐部",
-  "clubDashboard": "俱乐部仪表盘",
+  "clubDashboard": "俱乐部仪表板",
   "clubDescription": "俱乐部描述",
   "clubDescriptionRequired": "俱乐部描述是必需的",
   "clubImageRequired": "俱乐部图片是必需的",
@@ -34,23 +34,23 @@
   "createClub": "创建俱乐部",
   "createExam": "创建考试",
   "createProgram": "创建计划",
-  "dark": "深色模式",
+  "dark": "黑暗模式",
   "delete": "删除",
   "description": "描述",
-  "detail": "详情",
-  "dontHaveAnAccount": "没有账号？",
+  "detail": "详细",
+  "dontHaveAnAccount": "没有账户？",
   "download": "下载",
-  "dueAt": "到期",
-  "dueAtRequired": "截止时间是必填项",
+  "dueAt": "到期于",
+  "dueAtRequired": "到期日期是必需的",
   "edit": "编辑",
   "editClub": "编辑俱乐部",
   "editExam": "编辑考试",
-  "editProfile": "编辑资料",
+  "editProfile": "编辑个人资料",
   "editProgram": "编辑计划",
-  "email": "电子邮件 ",
-  "emailOrUsernameOrPhone": "邮箱 / 用户名 / 电话",
-  "emailRequired": "邮箱是必需的",
-  "emailUsernamePhoneAlreadyRegistered": "邮箱 / 用户名 / 电话已被注册",
+  "email": "电子邮件",
+  "emailOrUsernameOrPhone": "电子邮件 / 用户名 / 电话",
+  "emailRequired": "电子邮件是必需的",
+  "emailUsernamePhoneAlreadyRegistered": "电子邮件 / 用户名 / 电话已注册",
   "emptyExam": "考试为空",
   "endDate": "结束日期",
   "endDateRequired": "结束日期是必需的",
@@ -58,35 +58,38 @@
   "enterClubDescription": "输入俱乐部描述",
   "enterClubName": "输入俱乐部名称",
   "enterDescription": "输入描述",
-  "enterDueAt": "输入截止时间",
-  "enterEmailOrUsernameOrPhone": "输入邮箱 / 用户名 / 电话",
+  "enterDueAt": "输入到期日期",
+  "enterEmailOrUsernameOrPhone": "输入电子邮件 / 用户名 / 电话",
   "enterEndDate": "输入结束日期",
   "enterExamDescription": "输入考试描述",
   "enterExamTitle": "输入考试标题",
   "enterProgramName": "输入计划名称",
   "enterStartDate": "输入开始日期",
-  "enterYourAddress": "请输入您的地址",
-  "enterYourBornDate": "请输入您的出生日期",
-  "enterYourBornPlace": "请输入您的出生地点",
-  "enterYourEmail": "输入您的邮箱",
-  "enterYourExpertise": "请输入您的专长",
-  "enterYourGender": "输入您的性别",
-  "enterYourName": "输入您的姓名",
-  "enterYourPass": "输入您的密码",
-  "enterYourPhoneNumber": "输入您的电话号码",
-  "enterYourReligion": "请输入您的宗教",
-  "enterYourUsername": "输入您的用户名",
+  "enterYourAddress": "输入你的地址",
+  "enterYourBornDate": "输入你的出生日期",
+  "enterYourBornPlace": "输入你的出生地",
+  "enterYourEmail": "输入你的电子邮件",
+  "enterYourExpertise": "输入你的专长",
+  "enterYourGender": "输入你的性别",
+  "enterYourName": "输入你的名字",
+  "enterYourPass": "输入你的密码",
+  "enterYourPhoneNumber": "输入你的电话号码",
+  "enterYourReligion": "输入你的宗教信仰",
+  "enterYourUsername": "输入你的用户名",
   "error": "错误",
   "errorCreateExercise": "创建练习失败",
-  "establishedAt": "成立于：",
+  "errorCreateQuestion": "创建问题失败",
+  "errorUpdateExercise": "更新练习失败",
+  "errorUpdateQuestion": "更新问题失败",
+  "establishedAt": "成立于:",
   "exam": "考试",
   "examDescription": "考试描述",
   "exams": "考试",
-  "examTitleRequired": "考试标题是必填项",
+  "examTitleRequired": "考试标题是必需的",
   "exercise": "练习",
   "expertise": "专长",
-  "expertiseRequired": "专长是必填项",
-  "expiredSession": "已过期",
+  "expertiseRequired": "专长是必需的",
+  "expiredSession": "过期",
   "failedCreateClub": "创建俱乐部失败",
   "failedCreateExam": "创建考试失败",
   "failedCreateExercises": "创建练习失败",
@@ -94,23 +97,23 @@
   "failedEditExam": "编辑考试失败",
   "failedEditProgram": "编辑计划失败",
   "failedLeaveClub": "离开俱乐部失败",
-  "failedLogout": "注销失败",
+  "failedLogout": "登出失败",
   "failedSignIn": "登录失败",
   "failedSignUp": "注册失败",
   "failedUpdateClub": "更新俱乐部失败",
   "failedUpdateExercises": "更新练习失败",
   "failedUpdateProfile": "更新个人资料失败",
-  "futsal": "室内五人制足球",
+  "futsal": "五人制足球",
   "gender": "性别",
   "genderRequired": "性别是必需的",
   "general": "常规",
   "handBall": "手球",
-  "hello": "你好",
+  "hello": "你好,",
   "history": "历史",
   "identifierRequired": "标识符是必需的",
-  "indonesian": "印度尼西亚语",
+  "indonesian": "印尼语",
   "info": "信息",
-  "invalidEmail": "无效的邮箱",
+  "invalidEmail": "无效的电子邮件",
   "invalidPhoneNumber": "无效的电话号码",
   "invite": "邀请",
   "join": "加入",
@@ -120,22 +123,22 @@
   "leaveClub": "离开俱乐部",
   "leaveClubConfirmation": "您确定要离开这个俱乐部吗？",
   "leaveClubSuccess": "成功离开俱乐部",
-  "light": "浅色模式",
-  "logout": "注销",
+  "light": "明亮模式",
+  "logout": "登出",
   "management": "管理",
   "members": "成员",
   "myClub": "我的俱乐部",
-  "myClubTraining": "我的俱乐部训练",
-  "name": "姓名",
-  "nameRequired": "姓名是必需的",
+  "myClubTraining": "我的俱乐部",
+  "name": "名字",
+  "nameRequired": "名字是必需的",
   "newExam": "新考试",
   "newProgram": "新计划",
-  "noClubsFound": "未找到俱乐部",
-  "noEvents": "无事件",
-  "noExpertise": "无专长",
-  "noMembersFound": "未找到成员",
-  "noSpaceAllowed": "不允许空格",
-  "noUsersFound": "未找到用户",
+  "noClubsFound": "没有找到俱乐部",
+  "noEvents": "没有事件",
+  "noExpertise": "没有专长",
+  "noMembersFound": "没有找到成员",
+  "noSpaceAllowed": "不允许有空格",
+  "noUsersFound": "没有找到用户",
   "or": "或",
   "overview": "概览",
   "pageNotFound": "页面未找到",
@@ -149,35 +152,37 @@
   "programs": "计划",
   "question": "问题",
   "religion": "宗教",
-  "religionRequired": "宗教是必填项",
+  "religionRequired": "宗教是必需的",
   "search": "搜索",
   "session": "会话",
   "settings": "设置",
   "signIn": "登录",
   "signUp": "注册",
   "soccer": "足球",
-  "sport": "运动",
+  "sport": "运动：",
   "sportType": "运动类型",
   "startDate": "开始日期",
   "startDateRequired": "开始日期是必需的",
-  "succesEditProgram": "计划编辑成功",
+  "succesEditProgram": "成功编辑计划",
   "success": "成功",
-  "successCreateClub": "俱乐部创建成功",
-  "successCreateExercise": "练习创建成功",
+  "successCreateClub": "成功创建俱乐部",
+  "successCreateExercise": "成功创建练习",
   "successCreateExercises": "成功创建练习",
-  "successCreateProgram": "计划创建成功",
-  "successLogout": "注销成功",
-  "successSignIn": "登录成功",
-  "successSignUp": "注册成功",
+  "successCreateProgram": "成功创建计划",
+  "successCreateQuestion": "成功创建问题",
+  "successLogout": "成功登出",
+  "successSignIn": "成功登录",
+  "successSignUp": "成功注册",
   "successUpdateClub": "成功更新俱乐部",
-  "successUpdateExercises": "练习更新成功",
+  "successUpdateExercises": "成功更新练习",
   "successUpdateProfile": "成功更新个人资料",
+  "successUpdateQuestions": "成功更新问题",
   "system": "系统",
   "tactical": "战术",
   "theme": "主题",
   "title": "标题",
   "updateClub": "更新俱乐部",
-  "updateProfile": "更新资料",
+  "updateProfile": "更新个人资料",
   "upload": "上传",
   "user": "用户",
   "username": "用户名",
