feat: 🎸 make coach program ui

--- a/lib/core/l10n/intl_en.arb
+++ b/lib/core/l10n/intl_en.arb
@@ -146,8 +146,10 @@
   "password": "Password",
   "phoneNumber": "Phone Number",
   "phoneNumberRequired": "Phone number is required",
+  "programName": "Program Name",
   "program": "Program",
   "programDetail": "Program Detail",
+  "programImageRequired": "Program image is required",
   "programNameRequired": "Program name is required",
   "programs": "Programs",
   "question": "Question",
