--- a/lib/core/l10n/intl_id.arb
+++ b/lib/core/l10n/intl_id.arb
@@ -146,8 +146,10 @@
   "password": "Kata Sandi",
   "phoneNumber": "Nomor Telepon",
   "phoneNumberRequired": "Nomor telepon diperlukan",
+  "programName": "Nama Program",
   "program": "Program",
   "programDetail": "Detail Program",
+  "programImageRequired": "Foto program diperlukan",
   "programNameRequired": "Nama program diperlukan",
   "programs": "Program",
   "question": "Pertanyaan",
